--- a/Nedelja1/main.css
+++ b/Nedelja1/main.css
@@ -55,10 +55,11 @@ img{
   float: left;
   padding: 0 10px;
   _outline: 5px dotted pink;
-  height: 1000px;
+  height: 900px;
   margin: 0 auto;
   border: 2px double;
   text-align: center;
+  overflow:scroll;
 }
 
 .col-1-1{
@@ -66,6 +67,8 @@ img{
   background-image: url(img/grad2.jpg);
   background-repeat: no-repeat;
   border-style: double;
+  color: white;
+  _min-height: 300px;
 
 }
 .col-1-2{
@@ -113,20 +116,19 @@ img{
 /**********************************************
                 Specific styles
 **********************************************/
-/*.main-header {
+.main-header {
   _background-color: #466BB4;
   position: fixed;
   top: 0;
   left: 0;
   width: 960px;
   height: 100px;
-  z-index: 9999;*/
+
 }
 .logo {
   position: fixed;
   top: 25px;
   left: 20px;
-  text-align: center;
   background-image:url(img/logo1.png);
 }
 nav ul {
@@ -135,7 +137,6 @@ nav ul {
 nav ul li {
   float: left;
   width: 120px;
-  _background-color: #F7921E;
   text-align: center;
   position: relative;
   margin: 0 100px;
