--- a/Nedelja1/main.css
+++ b/Nedelja1/main.css
@@ -40,7 +40,7 @@ a:hover {
 .container {
   width: 960px;
   margin: 0 auto;
-  height: 600px;
+  height: 500px;
   _position: absolute;
 }
 img{
@@ -97,6 +97,8 @@ img{
 .container2{
   background-color: white;
   opacity: .8;
+  padding: 15px;
+  text-align: center;
 }
 .forme{
   width:700px;
@@ -113,6 +115,9 @@ img{
 .name{
   text-align: center;
   color: white;
+}
+.name1{
+  margin: 0 0 300px 0;
 }
 /**********************************************
                 Specific styles
