--- a/Nedelja1/main.css
+++ b/Nedelja1/main.css
@@ -29,10 +29,10 @@ h1 a {
 }
 a {
   text-decoration: none;
-  color: #58585A;
+  color: white;
 }
 a:hover {
-  color: white;
+  color: black;
 }
 /**********************************************
                     Layout
@@ -116,9 +116,8 @@ img{
   text-align: center;
   color: white;
 }
-.name1{
-  margin: 0 0 300px 0;
-}
+
+
 /**********************************************
                 Specific styles
 **********************************************/
