--- a/Nedelja1/main.css
+++ b/Nedelja1/main.css
@@ -24,6 +24,10 @@ h1 {
   font-size: 30px;
   margin: 0;
 }
+h2{
+  font-size: 100px;
+
+}
 h1 a {
   color: #F7921E;
 }
@@ -32,7 +36,7 @@ a {
   color: #58585A;
 }
 a:hover {
-  color: white;
+  color: black;
 }
 /**********************************************
                     Layout
